// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total 2000"
"autoColDef.valueGetter(Ada Lovelace)",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"autoColDef.valueGetter(Marvin Minsky)","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"autoColDef.valueGetter(Marvin Minsky)","2001"
"","Total 2001"
"autoColDef.valueGetter(Donald Knuth)",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Ada Lovelace)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Donald Knuth)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Ada Lovelace)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Donald Knuth)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))","autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
"Ireland","Total 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","2001"
"","Total 2001"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))","autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))","autoColDef.valueFormatter(autoColDef.valueGetter(Alan Turing))"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Ada Lovelace))","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Marvin Minsky))","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(autoColDef.valueGetter(Donald Knuth))","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total 2000"
"autoColDef.valueGetter(Ada Lovelace)",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"autoColDef.valueGetter(Marvin Minsky)","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"autoColDef.valueGetter(Marvin Minsky)","2001"
"","Total 2001"
"autoColDef.valueGetter(Donald Knuth)",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Ada Lovelace)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Donald Knuth)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Alan Turing)","autoColDef.valueGetter(Alan Turing)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Ada Lovelace)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueGetter(Marvin Minsky)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueGetter(Donald Knuth)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Ireland","Total 2000"
"",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"","2001"
"","Total 2001"
"",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"",""
"Ireland","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"",""
"Ireland","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"autoColDef.valueFormatter(undefined)","autoColDef.valueFormatter(undefined)"
"Ireland","Total 2000"
"autoColDef.valueFormatter(undefined)",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"autoColDef.valueFormatter(undefined)","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"autoColDef.valueFormatter(undefined)","2001"
"","Total 2001"
"autoColDef.valueFormatter(undefined)",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","autoColDef.valueFormatter(undefined)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","autoColDef.valueFormatter(undefined)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"autoColDef.valueFormatter(undefined)","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Ireland","Total 2000"
"",""
"","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"","2001"
"","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"","2001"
"","Total 2001"
"",""
"","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"",""
"Ireland","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"",""
"Ireland","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","Total columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland","2000"
"Ireland","Total 2000"
"Ireland",""
"Ireland","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"Italy","2001"
"Italy","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"(Blanks)","2001"
"(Blanks)","Total 2001"
"(Blanks)",""
"(Blanks)","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland","2000"
"Ireland","Total 2000"
"Ireland",""
"Ireland","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"Italy","2001"
"Italy","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"(Blanks)","2001"
"(Blanks)","Total 2001"
"(Blanks)",""
"(Blanks)","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland","2000"
"Ireland","Total 2000"
"Ireland",""
"Ireland","Total "
"Total Ireland",""
"Italy","2000"
"Italy","Total 2000"
"Italy","2001"
"Italy","Total 2001"
"Total Italy",""
"(Blanks)","2000"
"","Total 2000"
"(Blanks)","2001"
"(Blanks)","Total 2001"
"(Blanks)",""
"(Blanks)","Total "
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=false > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","Total columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Ireland","Total columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","Total columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Italy","Total columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","Total columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","Total columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"(Blanks)","Total columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=(p) => \`autoColDef.valueGetter(\${p.data?.athlete ?? "MISSING"})\` > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"",""
"Total Ireland",""
"Italy","2000"
"","2001"
"Total Italy",""
"(Blanks)","2000"
"","2001"
"",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=false > autoGroupColumnDef.valueGetter=undefined > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"","columnDef[1].valueFormatter(2001)"
"","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland",""
"Total Ireland",""
"Italy","2000"
"Italy","2001"
"Total Italy",""
"(Blanks)","2000"
"(Blanks)","2001"
"(Blanks)",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland",""
"Total Ireland",""
"Italy","2000"
"Italy","2001"
"Total Italy",""
"(Blanks)","2000"
"(Blanks)","2001"
"(Blanks)",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Country","Year"
"Ireland","2000"
"Ireland",""
"Total Ireland",""
"Italy","2000"
"Italy","2001"
"Total Italy",""
"(Blanks)","2000"
"(Blanks)","2001"
"(Blanks)",""
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide > groupDisplayType=multipleColumns > pivotMode=true > groupHideOpenParents=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Country","Year"
"Ireland","columnDef[1].valueFormatter(2000)"
"Ireland","columnDef[1].valueFormatter()"
"Total Ireland",""
"Italy","columnDef[1].valueFormatter(2000)"
"Italy","columnDef[1].valueFormatter(2001)"
"Total Italy",""
"(Blanks)","columnDef[1].valueFormatter(2000)"
"(Blanks)","columnDef[1].valueFormatter(2001)"
"(Blanks)","columnDef[1].valueFormatter()"
"Total (Blanks)","""
`;
